[package]
name = "rusk-socks5"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.27"
num_enum = "0.7"
clap = { version = "4.5.43", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
ipnet = "2.9"
